Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,6 +151,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly \n",
+    "plotly.tools.set_credentials_file(username='DemoAccount', api_key='lr1c37zw81')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
