Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "import plotly \n",
-    "plotly.tools.set_credentials_file(username='arkabrennan', api_key='lr1c37zw81')\n"
+    "plotly.tools.set_credentials_file(username='markabrennan', api_key='UeAB9wmkLbENL9i\\')\n"
    ]
   },
   {
