--- a/index.ipynb
+++ b/index.ipynb
@@ -152,21 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-4-d4c20cfbdb1c>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-d4c20cfbdb1c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    plotly.tools.set_credentials_file(username='markabrennan', api_key='UeAB9wmkLbENL9i\\')\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plotly \n",
-    "plotly.tools.set_credentials_file(username='markabrennan', api_key='UeAB9wmkLbENL9i\\')\n"
+    "plotly.tools.set_credentials_file(username='markabrennan', api_key='UeAB9wmkLbENL9i')\n"
    ]
   },
   {
